--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Karthikeya - Backend Engineer & ML Enthusiast</title>
+    <title>Appasani Karthikeya - Upcoming ML Engineer & Enthusiast</title>
     <meta name="description" content="Portfolio of Karthikeya - Aspiring Backend Engineer and Machine Learning Enthusiast. View my projects and get in touch." />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
